# wd_fw_update

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.md
src/wd_fw_update/: main.py  skeleton.py
tests/: conftest.py  test_main.py  test_skeleton.py
